<resources>
    <string name="welcome">Welcome to %1$s</string>
    <string name="permission_request_code">1000</string>
    <string name="apps">Apps</string>
    <string name="sessions">Sessions</string>
    <string name="edit_session">Edit Session</string>
    <string name="filesystems">Filesystems</string>
    <string name="edit_filesystem">Edit Filesystem</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="toc">Terms &amp; Conditions</string>
    <string name="wiki">Wiki</string>
    <string name="button_continue">Continue</string>
    <string name="button_advanced_options_show">Show Advanced Options</string>
    <string name="button_advanced_options_hide">Hide Advanced Options</string>
    <string name="button_select_backup_import">Select backup file to import</string>
    <string name="app_info">App Info</string>
    <string name="stop_app">Stop App</string>
    <string name="stop_session">Stop Session</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="backup">Export</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="clear_support_files">Clear All Support Files</string>
    <string name="hint_filesystem_name">Filesystem name</string>
    <string name="hint_session_name">Session Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_vnc_password">VNC Password</string>
    <string name="error_session_name">You must provide a session name</string>
    <string name="error_filesystem_name">You must provide a filesystem name</string>
    <string name="error_username">You must provide a username</string>
    <string name="error_empty_field">Each field must be entered!</string>
    <string name="error_app_description_not_found">Could not find a description for this app. Try refreshing.</string>
    <string name="error_vnc_password_length_incorrect">VNC Password must be between 6 to 8 characters!</string>
    <string name="error_username_invalid">Username has invalid characters</string>
    <string name="error_password_invalid">Password has invalid characters</string>
    <string name="error_vnc_password_invalid">VNC Password has invalid characters</string>
    <string name="error_username_invalid_characters">Characters in username must be 1 to 30 characters with lowercase letters and/or numbers.</string>
    <string name="error_username_in_blacklist">That username is possibly reserved by Linux and cannot be used as a filesystem username.</string>
    <string name="error_filesystem_name_invalid_characters">Characters in filesystem name must be 1 to 50 characters without characters such as \"/:*\\|</string>
    <string name="error_export_execution_failure">Exporting failed. Reason: %1$s</string>
    <string name="error_export_local_failure">Exporting to local storage failed.</string>
    <string name="error_export_filesystem_not_found">Could not determine filesystem to backup. Please try again.</string>
    <string name="error_export_copy_public_external_failure">Copying backup to external public storage failed.</string>
    <string name="error_library_file_missing">It looks like we\'re missing a required library!</string>
    <string name="error_library_setup_failure">It looks like initial setup failed. Please contact us on Github.</string>
    <string name="error_no_lib_directory">It looks like the library directory we are looking for does not exist. Please contact us on Github.</string>
    <string name="error_filesystem_delete">Deleting filesystem failed! Try stopping all sessions and trying again.</string>
    <string name="download_failure_http_error">Http Error: %1$s</string>
    <string name="download_failure_cannot_resume">Cannot resume download.</string>
    <string name="download_failure_no_external_devices">No external devices (storage) found.</string>
    <string name="download_failure_destination_exists">Destination already exists.</string>
    <string name="download_failure_unknown_file_error">Unknown file error.</string>
    <string name="download_failure_http_processing">HTTP data processing error.</string>
    <string name="download_failure_insufficient_external_storage">Insufficient external storage space.</string>
    <string name="download_failure_too_many_redirects">Too many redirects.</string>
    <string name="download_failure_unhandled_http_response">Unhandled HTTP response code.</string>
    <string name="download_failure_unknown_error">Unknown error.</string>
    <string name="download_failure_missing_error">Error code unknown.</string>
    <string name="download_failure_reason_not_found">Reason not available.</string>
    <string name="download_failure_finished_wrong_items">Tried to finish download process with items we did not enqueue.</string>
    <string name="download_failure_md5">Filesystem md5 checksum did not match the expected value.</string>
    <string name="illegal_state_github_message">
        %1$s \nWe are working to resolve these issues. You can let us know about this issue on
        Github if you\'d like to help!
    </string>
    <string name="illegal_state_title">%1$s has entered an illegal state!</string>
    <string name="illegal_state_transition">Bad state transition: %1$s</string>
    <string name="illegal_state_too_many_selections_when_permissions_granted">Both a session and an app have been selected when permissions are granted.</string>
    <string name="illegal_state_no_selections_when_permissions_granted">Neither a session nor app have been selected when permissions are granted.</string>
    <string name="illegal_state_no_filesystem_selected_when_credentials_selected">Credentials have been submitted for a filesystem, but one has not been selected.</string>
    <string name="illegal_state_no_app_selected_when_preference_submitted">App preference submitted, but one has not been selected.</string>
    <string name="illegal_state_no_app_selected_when_preparation_started">Trying to start app preparation, but no app has been selected.</string>
    <string name="illegal_state_error_fetching_app_database_entries">Could not fetch apps database entries.</string>
    <string name="illegal_state_error_copying_app_script">Could not copy app script.</string>
    <string name="illegal_state_no_session_selected_when_preparation_started">Trying to handle session preparation before one has been selected.</string>
    <string name="illegal_state_error_fetching_asset_lists">Failed to retrieve asset lists.</string>
    <string name="illegal_state_remote_unreachable_during_generation">
        Could not reach remote host while generating download requirements. Make sure you have a
        strong network connection and try again.
    </string>
    <string name="illegal_state_downloads_did_not_complete_successfully">Downloads have failed due to: %1$s.</string>
    <string name="illegal_state_failed_to_copy_assets_to_local">Failed to copy assets to local storage. Try clearing support files.</string>
    <string name="illegal_state_assets_have_not_been_downloaded">Assets need to be copied to your filesystem, but it looks like they have not been downloaded. Try clearing support files.</string>
    <string name="illegal_state_empty_download_cache_access">The downloads cache was empty when access was attempted.</string>
    <string name="illegal_state_failed_to_copy_assets_to_filesystem">Failed to copy assets to filesystem. Try clearing support files.</string>
    <string name="illegal_state_failed_to_extract_filesystem">Failed to extract filesystem. Try clearing support files. Failure reason: %1$s</string>
    <string name="illegal_state_failed_to_clear_support_files">Failed to clear support files.</string>
    <string name="illegal_state_insufficient_storage">Failed to detect sufficient storage.  Try increasing the available storage on your device to at least 250 MB.</string>
    <string name="pref_app_category">App Preferences</string>
    <string name="pref_default_landing_page_title">Default Landing Page</string>
    <string name="pref_default_landing_page_message">Select the page you would like to open the app with.</string>
    <string name="pref_clear_auto_start_title">Clear Auto Start Settings</string>
    <string name="pref_clear_auto_start_summary">Stops any app from auto starting until enabled again.</string>
    <string name="pref_clear_connect_type_title">Clear Connection Type Settings</string>
    <string name="pref_clear_connect_type_summary">Will ask again what connection type you prefer on the next start.</string>
    <string name="pref_hide_sessions_filesystems_title">Hide Bottom Navigation</string>
    <string name="pref_hide_sessions_filesystems_summary">Simplifies app by hiding views that are not the default landing page.</string>
    <string name="pref_hide_distributions_title">Hide Distributions</string>
    <string name="pref_hide_distributions_summary">Do not display any app that is categorized as a distributions.</string>
    <string name="pref_custom_hostname_enabled_title">Use Custom Hostname</string>
    <string name="pref_custom_hostname_enabled_summary">Allows you to specify custom hostname which will be used in /etc/hosts and /etc/hostname.</string>
    <string name="pref_hostname_title">Set Custom Hostsname</string>
    <string name="pref_custom_dns_enabled_title">Use Custom reslov.conf File</string>
    <string name="pref_custom_dns_enabled_summary">Allows you to specify custom contents for the /etc/resolv.conf file.</string>
    <string name="pref_dns_title">Set resolv.conf File Contents</string>
    <string name="pref_custom_apps_enabled_title">Use Custom URL for Apps Server</string>
    <string name="pref_custom_apps_enabled_summary">Allows specifying a custom URL for the server which hosts the apps to list.</string>
    <string name="pref_apps_title">Set URL for Apps Server</string>
    <string name="pref_custom_filesystem_enabled_title">Use Custom URL for Filesystem Server</string>
    <string name="pref_custom_filesystem_enabled_summary">Allows specifying a custom URL for the server which hosts the filesystem to use.</string>
    <string name="pref_filesystem_title">Set URL for Filesystem Server</string>
    <string name="pref_custom_scaling_enabled_title">Use Custom Graphical Scaling Factor</string>
    <string name="pref_custom_scaling_enabled_summary">Allows specifying a custom scaling factor to decrease the resolution of the VNC session.</string>
    <string name="pref_scaling_title">Set Custom Scaling Factor</string>
    <string name="pref_hide_custom_toolbar_title">Hide VNC Toolbar</string>
    <string name="pref_hide_custom_toolbar_summary">Hides the toolbar that shows up when inside a VNC session.</string>
    <string name="pref_default_vnc_input_mode_title">Default VNC Input Mode</string>
    <string name="pref_default_vnc_input_mode_summary">Set the default VNC Input Mode. Can be overridden from VNC session toolbar.</string>
    <string name="pref_hide_vnc_extra_keys_title">Hide VNC Extra Keys</string>
    <string name="pref_hide_vnc_extra_keys_summary">Hides the extra keys that get displayed with the soft keyboard.</string>
    <string name="pref_proot_category">PRoot Preferences</string>
    <string name="pref_proot_debugging_enabled_title">PRoot Debugging Logs Enabled</string>
    <string name="pref_proot_debugging_enabled_summary">Only necessary if having problems with the app. Log file stored at\n/mnt/sdcard/PRoot_Debug_Log</string>
    <string name="pref_proot_debugging_level_title">Debug Verbosity Level</string>
    <string name="pref_proot_debugging_level_summary">The higher the number, the greater the verbosity.</string>
    <string name="pref_proot_debugging_level_default">-1</string>
    <string name="pref_proot_delete_debug_file_title">Delete Old Debug Files</string>
</resources>