<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="pref_screen">
    <PreferenceCategory
        android:title="@string/pref_app_category"
        android:key="pref_app_category"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="pref_default_nav_location"
            android:title="@string/pref_default_landing_page_title"
            android:summary="@string/pref_default_landing_page_message"
            android:entries="@array/default_landing_pages"
            android:entryValues="@array/default_landing_pages"
            android:defaultValue="@string/apps"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="pref_clear_auto_start"
            android:title="@string/pref_clear_auto_start_title"
            android:summary="@string/pref_clear_auto_start_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="pref_clear_connect_type"
            android:title="@string/pref_clear_connect_type_title"
            android:summary="@string/pref_clear_connect_type_summary"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_hide_sessions_filesystems"
            android:title="@string/pref_hide_sessions_filesystems_title"
            android:summary="@string/pref_hide_sessions_filesystems_summary"
            android:defaultValue="@string/default_hide_sessions_filesystems"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_hide_distributions"
            android:title="@string/pref_hide_distributions_title"
            android:summary="@string/pref_hide_distributions_summary"
            android:defaultValue="@string/default_hide_distributions"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_hostname_enabled"
            android:title="@string/pref_custom_hostname_enabled_title"
            android:summary="@string/pref_custom_hostname_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_hostname_enabled"
            android:key="pref_hostname"
            android:title="@string/pref_hostname_title"
            android:defaultValue="@string/pref_hostname_default"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_dns_enabled"
            android:title="@string/pref_custom_dns_enabled_title"
            android:summary="@string/pref_custom_dns_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_dns_enabled"
            android:key="pref_dns"
            android:title="@string/pref_dns_title"
            android:defaultValue="@string/pref_dns_default"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_apps_enabled"
            android:title="@string/pref_custom_apps_enabled_title"
            android:summary="@string/pref_custom_apps_enabled_summary"
            android:defaultValue="@string/default_custom_apps_enabled"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_apps_enabled"
            android:key="pref_apps"
            android:title="@string/pref_apps_title"
            android:defaultValue="@string/default_apps_url"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_filesystem_enabled"
            android:title="@string/pref_custom_filesystem_enabled_title"
            android:summary="@string/pref_custom_filesystem_enabled_summary"
            android:defaultValue="@string/default_custom_filesystem_enabled"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_filesystem_enabled"
            android:key="pref_filesystem"
            android:title="@string/pref_filesystem_title"
            android:defaultValue="@string/default_filesystem_url"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_custom_scaling_enabled"
            android:title="@string/pref_custom_scaling_enabled_title"
            android:summary="@string/pref_custom_scaling_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            android:dependency="pref_custom_scaling_enabled"
            android:key="pref_scaling"
            android:title="@string/pref_scaling_title"
            android:inputType="number"
            android:defaultValue="1"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_hide_vnc_toolbar"
            android:title="@string/pref_hide_custom_toolbar_title"
            android:summary="@string/pref_hide_custom_toolbar_summary"
            android:defaultValue="@string/default_hide_vnc_toolbar"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="pref_hide_vnc_extra_keys"
            android:title="@string/pref_hide_vnc_extra_keys_title"
            android:summary="@string/pref_hide_vnc_extra_keys_summary"
            android:defaultValue="@string/default_hide_vnc_extra_keys"
            app:iconSpaceReserved="false"/>
        <ListPreference
            android:key="pref_default_vnc_input_mode"
            android:title="@string/pref_default_vnc_input_mode_title"
            android:summary="@string/pref_default_vnc_input_mode_summary"
            android:entries="@array/vnc_input_modes"
            android:entryValues="@array/vnc_input_modes"
            android:defaultValue="@string/default_vnc_input_mode"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_proot_category"
        android:key="pref_proot_category"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:key="pref_proot_debug_enabled"
            android:title="@string/pref_proot_debugging_enabled_title"
            android:summary="@string/pref_proot_debugging_enabled_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <ListPreference
            android:dependency="pref_proot_debug_enabled"
            android:key="pref_proot_debug_level"
            android:title="@string/pref_proot_debugging_level_title"
            android:summary="@string/pref_proot_debugging_level_summary"
            android:entries="@array/proot_debug_levels"
            android:entryValues="@array/proot_debug_levels"
            android:defaultValue="@string/pref_proot_debugging_level_default"
            app:iconSpaceReserved="false"/>
        <Preference
            android:dependency="pref_proot_debug_enabled"
            android:key="pref_proot_delete_debug_file"
            android:title="@string/pref_proot_delete_debug_file_title"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>